# ai_media_assistant

./: .gitignore  AGENTS.md  LICENSE  README.md  build_exe.ps1  gui_entry.py  input.txt  package-lock.json  package.json  pyproject.toml  readme.eng.md  requirements.txt  setup_f5_tts.ps1
ai_caption_video/: __init__.py  cli.py  config.py  f5_tts_bridge.py  font_utils.py  gui.py  music_library.py  omnivoice_bridge.py  renderer.py  text_utils.py  tts_bridge.py  video_builder.py
apps/api/: alembic.ini
apps/api/alembic/: env.py  script.py.mako
apps/api/alembic/versions/: 0001_initial.py  0002_jobs_assets_project_links.py  0003_segment_background_position.py
apps/api/app/: config.py  main.py  models.py  schemas.py
apps/api/app/api/routes/: assets.py  health.py  jobs.py  media.py  projects.py
apps/api/app/db/: session.py
apps/api/app/services/: background_matcher.py  media_jobs.py  worker_status.py
apps/api/tests/: test_projects.py
apps/web/: index.html  package-lock.json  package.json  vite.config.ts
apps/web/src/: App.tsx  api.ts  i18n.test.ts  i18n.tsx  main.tsx  styles.css  types.ts
apps/web/src/components/: Brand.tsx  Editor.tsx  Home.tsx
docs/: PRD.md  USER_GUIDE.md
scripts/: catalog_new_resources.py  package_release.ps1  run_python.mjs  setup_macos.sh  setup_windows.ps1  start_macos.sh  start_windows.ps1  stop_local_services.mjs  stop_local_services.ps1
scripts/macos_models/: README.md  build_all_macos.sh  build_omnivoice_macos.sh  build_qwen_macos.sh  package_macos_models.sh
storage/resources/: README.md
workers/render_worker/: main.py
(+2 files in other folders)
