[project]
name = "ai-media-assistant"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.34",
  "sqlalchemy>=2.0",
  "alembic>=1.14",
  "pydantic-settings>=2.7",
  "pillow>=11.0",
  "moviepy>=2.0",
  "python-multipart>=0.0.20",
]

[project.optional-dependencies]
dev = ["pytest>=8.3", "httpx>=0.28"]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []

[tool.pytest.ini_options]
pythonpath = ["apps/api", "packages/media_core/src"]
testpaths = ["apps/api/tests", "packages/media_core/tests"]
